Fixed grid to layout properly on mobile'

--- a/styles.css
+++ b/styles.css
@@ -1,62 +1,66 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
-    background: #78909C;
+    background: rgb(120, 152, 156);
     color: #EEEEEE;
     font-family: 'Staatliches', cursive;
 }
 
 .header {
-    text-align: left;
-    margin-bottom: 20px;
-    font-size: 70px;
-    width: 50%;
-    margin: 0 auto;
+    margin-top: 0px;
+    text-align: center;
+    font-size: 40px;
+    border: 2px solid black;
 }
 
-.wrapper {
-    width: 50%;
+main {
+    position: relative;
+    top: 7em;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 250px 250px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(150px, auto);
     grid-gap: 10px;
-    margin: 0 auto;
+    justify-items: center;
+    align-items: center;
 }
 
 .container {
     position: relative;
-    width: 250px;
-    height: 250px;
+    width: 100%;
+    height: 100%;
     background: transparent;
     perspective: 1000px;
-    margin: auto;    
+    margin: auto;
+    border: 2px solid white;    
 }
 
-.thecard {
+.thecard, .thefront, .theback {
     position: absolute;
     width: 100%;
     height: 100%;
+}
+
+.thefront, .theback {
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+}
+
+.thecard {
     transform-style: preserve-3d;
     transition: all 0.5s ease;
 }
 
 .thefront {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
     background: black;
     font-size: 100px;
-    text-align: center;
 }
 
 .theback {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
     color: white;
-    font-size: 100px;
+    font-size: 50px;
     transform: rotateY(180deg);
     text-align: center;
 }
@@ -65,7 +69,10 @@ body {
     transform: rotateY(180deg);
 }
 
-p {
-    margin-top: 50px;
-    pointer-events: none;
+
+.info {
+    position: relative;
+    font-size: 20px;
+    top: 62.5px;
+    text-align: center;
 }
